Прикрутил гориллу и правку постов. Пока без сохранения в базу

--- a/lesson4/post.html
+++ b/lesson4/post.html
@@ -20,6 +20,7 @@
             </div>
             <p>{{.Text}}
             </p>
+            <p><a href="/post/edit/{{.ID}}">Изменить</a></p>
         </div>
     </div>
 </div>
