добавил сохранение нового поста в БД

--- a/lesson4/edit.html
+++ b/lesson4/edit.html
@@ -15,7 +15,7 @@
                 <p> <input type="text" placeholder="{{.Author}}">  </p>
                  <p> <input type="text" placeholder="{{.Category}}">  </p>
             <p><input type="text" placeholder="{{.Text}}">  </p>
-            <p><a href="/post/edit?id={{.ID}}">Сохранить</a></p>
+            <p><a href="/post/edit/{{.ID}}/save">Сохранить</a></p>
         </div>
     </div>
 </div>
