добавил возможность удаления поста

--- a/lesson4/post.html
+++ b/lesson4/post.html
@@ -21,6 +21,7 @@
             <p>{{.Text}}
             </p>
             <p><a href="/post/edit/{{.ID}}">Изменить</a></p>
+            <p><a href="/post/delete/{{.ID}}">Удалить</a></p>
         </div>
     </div>
 </div>
